fix: dark mode

--- a/components/00-base/region.pcss
+++ b/components/00-base/region.pcss
@@ -1,22 +1,34 @@
 .region {
   &--banner {
-  /* placeholder */
+    /* placeholder */
   }
-
+  
   &--content-top {
     padding-block: 1rem;
   }
-
+  
   &--content-sidebars {
     /* placeholder */
   }
-
+  
   &--content {
     /* placeholder */
   }
-
+  
   &--footer {
     background-color: var(--color-bg-primary-light);
     padding-block: 2rem;
+    color: var(--color-fg-black-static);
+    
+    h2,
+    h3,
+    h4 {
+      color: var(--color-fg-primary);
+    }
+    
+    p,
+    li {
+      color: var(--color-fg-black-static);
+    }
   }
 }
