--- a/components/01-atoms/button/button.css
+++ b/components/01-atoms/button/button.css
@@ -5,28 +5,28 @@
   --color-button-primary-focus: var(--color-yellow-060);
   --color-button-primary-active: var(--color-yellow-080);
   --color-button-primary-hover-angle: var(--color-yellow-070);
-  
+
   --color-button-secondary-default: var(--color-blue-040);
   --color-button-secondary-hover: var(--color-blue-050);
   --color-button-secondary-focus: var(--color-blue-050);
   --color-button-secondary-active: var(--color-blue-070);
   --color-button-secondary-hover-angle: var(--color-blue-060);
-  
+
   --color-button-ghost-default: var(--color-blue-040);
   --color-button-ghost-hover: var(--color-blue-060);
   --color-button-ghost-focus: var(--color-blue-060);
   --color-button-ghost-active: var(--color-blue-080);
-  
+
   --color-button-disabled: var(--color-gray-060);
-  
+
   /* Sizing and Spacing */
   --size-block-button: 40px;
   --size-border-button: 1px;
   --size-button-margin: 0.5rem;
-  
+
   /* notch size if done as background */
   /*   --size-notch: calc(var(--size-block-button) * 0.33); */
-  
+
   /* notch size if done as clip path */
   --size-notch: calc(var(--size-block-button) * 0.5);
 }
@@ -37,7 +37,7 @@
   --color-button-focus: var(--color-button-primary-focus);
   --color-button-active: var(--color-button-primary-active);
   --color-button-hover-angle: var(--color-button-primary-hover-angle);
-  
+
   position: relative;
   margin: var(--size-button-margin);
   padding-inline: calc(var(--size-block-button) * 0.5);
@@ -45,17 +45,17 @@
   block-size: var(--size-block-button);
   max-block-size: var(--size-block-button);
   inline-size: auto;
-  
+
   display: inline-flex;
   flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  
+
   border: 0px solid transparent;
   outline: none;
   cursor: pointer;
-  
+
   font-family: var(--font-sans-serif);
   font-size: var(--size-text-med);
   font-weight: 600;
@@ -90,7 +90,7 @@
 
 .button::before {
     --size-notch: calc(var(--size-block-button) * 0.33);
-    
+
     transition: all 0.5s cubic-bezier(.69, 0, .71, .99);
     position: absolute;
     z-index: 1;
@@ -103,9 +103,9 @@
     block-size: 100%;
     background: linear-gradient(135deg, var(--color-bg-base) 0%, var(--color-bg-base) var(--size-notch), var(--color-button-hover-angle) var(--size-notch), var(--color-button-hover-angle) 50%, transparent 51%, transparent 100%);
     background-size: 100% 100%;
-    
+
     background-size: 0% 100%;
-    
+
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-position: 0% -100%;
@@ -121,15 +121,15 @@
     right: 0;
     top: 0;
     bottom: 0;
-    
+
     z-index: -1;
-    
+
     inline-size: calc(100% + (var(--size-gap-focus-indicator) * 2) + (var(--size-border-button) * 2));
     block-size: calc(100% + (var(--size-gap-focus-indicator) * 2) + (var(--size-border-button) * 2));
-    
+
     margin-block-start: calc((var(--size-gap-focus-indicator) + var(--size-focus-indicator) + var(--size-border-button)) * -1);
     margin-inline-start: calc((var(--size-gap-focus-indicator) + var(--size-focus-indicator) + var(--size-border-button)) * -1);
-    
+
     border: var(--size-focus-indicator) solid var(--color-focus-indicator);
     opacity: 0;
   }
@@ -185,7 +185,7 @@
     --color-button-focus: var(--color-button-secondary-focus);
     --color-button-active: var(--color-button-secondary-active);
     --color-button-hover-angle: var(--color-button-secondary-hover-angle);
-    
+
     color: var(--color-fg-white-static);
   }
 
@@ -201,10 +201,15 @@
     --color-button-hover: var(--color-button-ghost-hover);
     --color-button-focus: var(--color-button-ghost-focus);
     --color-button-active: var(--color-button-ghost-active);
-    
+
     background-color: transparent;
     border: var(--size-border-component) solid var(--color-button-default);
+    color: var(--color-fg-base);
   }
+
+.button--ghost .button__label, .button--empty .button__label {
+      color: var(--color-fg-base);
+    }
 
 .button--ghost::before, .button--empty::before {
       display: none;
